# tfg-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tfg-firmware.code-workspace  upload_wireless_station_firmware.sh
.github/workflows/: tests.yaml  tests.yml
blink/: CMakeLists.txt
central_station_firmware/: CMakeLists.txt  README.md  mongoose.cmake  set_secrets.example.sh  set_secrets.sh  upload_central_station_firmware.sh
central_station_firmware/include/: alerts.h  callbacks.h  central_station_firmware.h  errors.h  hazards.h  iaq.h  icons.h  mbedtls_config.h  mq_sensors.h  network.h  oled_display.h  utils.h
central_station_firmware/lib/tiny-ECDH-c/: CMakeLists.txt
central_station_firmware/pico-nrf24-driver-main/: .gitignore
central_station_firmware/scripts/: generate_icon_bytemap.sh  set_secrets.example.sh  upload_central_station_firmware.sh
central_station_firmware/src/: alerts.c  callbacks.c  central_station_firmware.c  functions.c  hazards.c  mq_sensors.c  network.c  oled_display.c  reading_mq_series_sensors.c  utils.c
central_station_firmware/tests/: project.yml
scripts/: upload_wireless_station_firmware.sh
wireless_station_firmware/: CMakeLists.txt  README.md  blink_example.c  sensors_functions.c  upload_wireless_station_firmware.sh  wireless_station.c  wireless_station.h
wireless_station_firmware/include/: alerts.h  bme680_port.h  callbacks.h  errors.h  hazards.h  iaq.h  low_power.h  oled_display.h  utils.h  wireless_station_firmware.h
wireless_station_firmware/scripts/: generate_icon_bytemap.sh  set_secrets.example.sh  (+1 more)
(+33 files in other folders)
